--- a/update/rooms-style-3.html
+++ b/update/rooms-style-3.html
@@ -467,7 +467,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 text-center">
-                            Copyright 2024 - Almaris by Designesia
+                            Copyright 2024 - https://ak2019cs.gitbook.io/aditya-kumar
                         </div>
                     </div>
                 </div>
