--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="de-flex-col header-col-mid">
                                 <ul id="mainmenu">
-                                    <li><a class="menu-item" href="index.html">Home</a>
+                                    <!-- <li><a class="menu-item" href="index.html">Home</a>
                                         <ul class="mega">
                                             <li>
                                                 <div class="container">
@@ -136,7 +136,7 @@
                                                 </div>                                                
                                             </li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li><a class="menu-item" href="rooms.html">Rooms</a>
                                         <ul class="mega">
                                             <li>
@@ -210,7 +210,7 @@
                                             <li><a href="gallery-carousel.html">Gallery Carousel</a></li>
                                         </ul>
                                     </li>
-                                    <li><a class="menu-item" href="news.html">News</a></li>
+                                    <!-- <li><a class="menu-item" href="news.html">News</a></li> -->
                                     <li><a class="menu-item" href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
@@ -249,13 +249,13 @@
                                                 <div class="spacer-single"></div>
                                                 <div class="sw-text-wrapper">
                                                     <div class="slider-extra mb-4">
-                                                        <span class="d-stars">
+                                                        <!-- <span class="d-stars">
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
-                                                        </span>
+                                                        </span> -->
                                                     </div>
                                                     <h1 class="slider-title mb-0">True Adventure Begin</h1>
                                                 </div>
@@ -292,13 +292,13 @@
                                                 <div class="spacer-single"></div>
                                                 <div class="sw-text-wrapper">
                                                     <div class="slider-extra mb-4">
-                                                        <span class="d-stars">
+                                                        <!-- <span class="d-stars">
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
                                                             <i class="icofont-star"></i>
-                                                        </span>
+                                                        </span> -->
                                                     </div>
                                                     <h1 class="slider-title mb-0">Nature's Best Escape</h1>
                                                 </div>
@@ -346,8 +346,8 @@
 
                         <div class="col-lg-8 text-center">
                             <div class="wow scaleIn">
-                                <div class="subtitle id-color mb-3">Welcome To Almaris</div>
-                                <h2 class="wow fadeInUp">In the Heart of the Mountain</h2>
+                                <div class="subtitle id-color mb-3">Welcome To Tiger Woods</div>
+                                <h2 class="wow fadeInUp">In the Heart of the Pilibhit Tiger Reserve</h2>
 
                                 <div class="text-center wow fadeInUp" data-wow-delay=".5s">
                                     <h4 class="fw-bold mb-1">4.9 out of 5</h4>
@@ -360,7 +360,7 @@
                                             <i class="icofont-star"></i>
                                         </span>
                                     </div>
-                                    <span class="d-block fs-14 mb-0">Based on 25000+ reviews</span>
+                                    <span class="d-block fs-14 mb-0">Based on 2500+ reviews</span>
                                 </div>
                             </div>
                         </div>
@@ -368,18 +368,18 @@
                         <div class="clearfix"></div>
 
                         <div class="col-lg-4 text-center wow fadeInUp" data-wow-delay=".2s">
-                            <a href="project-single.html" class="d-block hover mb-4">
+                            <a class="d-block hover mb-4">
                                 <div class="relative overflow-hidden">
                                     <div class="absolute start-0 w-100 abs-middle fs-36 text-white text-center z-2">
-                                        <h4 class="mb-0 hover-scale-in-3">View</h4>
+                                        <!-- <h4 class="mb-0 hover-scale-in-3">View</h4> -->
                                     </div> 
                                     <div class="absolute w-100 h-100 top-0 bg-dark hover-op-05"></div>
-                                    <img src="images-mountain-hotel/features/1.webp" class="img-fluid" alt="">
+                                    <img src="images-mountain-hotel/features/rest2.webp" class="img-fluid" alt="">
                                 </div>
                             </a>
 
-                            <h4>Mountain View Restaurant</h4>
-                            <p>Dolor eiusmod voluptate culpa consequat velit eu qui pariatur magna aute laborum officia sit consectetur sint dolor ut.</p>
+                            <h4>The Majestic Roar Restaurant</h4>
+                            <p>A regal dining experience amidst the heart of the jungle, where bold flavors meet the untamed spirit of the wild.</p>
                         </div>
 
                         <div class="col-lg-4 text-center wow fadeInUp" data-wow-delay=".4s">
@@ -394,8 +394,8 @@
                                 </div>
                             </a>
 
-                            <h4>Hiking Trails</h4>
-                            <p>Dolor eiusmod voluptate culpa consequat velit eu qui pariatur magna aute laborum officia sit consectetur sint dolor ut.</p>
+                            <h4>Whispering Wilderness Path:</h4>
+                            <p>A serene trail through dense forest, perfect for wildlife sightings and peaceful immersion in nature's beauty.</p>
                         </div>
 
                         <div class="col-lg-4 text-center wow fadeInUp" data-wow-delay=".6s">
@@ -409,8 +409,8 @@
                                 </div>
                             </a>
 
-                            <h4>Wildlife Tours</h4>
-                            <p>Dolor eiusmod voluptate culpa consequat velit eu qui pariatur magna aute laborum officia sit consectetur sint dolor ut.</p>
+                            <h4>Jungle Canopy</h4>
+                            <p>A canopy walk through dense foliage, providing a bird’s-eye view of the thriving wildlife</p>
                         </div>
                     </div>
 
@@ -432,7 +432,7 @@
                                 <img src="images-mountain-hotel/room/1.webp" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
-                                    <h3 class="fs-40 lh-1 mb-4">$129</h3>
+                                    <h3 class="fs-40 lh-1 mb-4">₹3000</h3>
                                     <a class="btn-line" href="room-single.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
@@ -458,7 +458,7 @@
                                 <img src="images-mountain-hotel/room/2.webp" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
-                                    <h3 class="fs-40 lh-1 mb-4">$129</h3>
+                                    <h3 class="fs-40 lh-1 mb-4">₹4000</h3>
                                     <a class="btn-line" href="room-single.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
@@ -484,7 +484,7 @@
                                 <img src="images-mountain-hotel/room/3.webp" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
-                                    <h3 class="fs-40 lh-1 mb-4">$139</h3>
+                                    <h3 class="fs-40 lh-1 mb-4">₹5000</h3>
                                     <a class="btn-line" href="room-single.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
@@ -505,7 +505,7 @@
                         <!-- room end -->
 
                         <!-- room begin -->
-                        <div class="col-lg-4 col-sm-6">
+                        <!-- <div class="col-lg-4 col-sm-6">
                             <div class="hover relative text-light text-center wow fadeInUp" data-wow-delay=".7s">
                                 <img src="images-mountain-hotel/room/4.webp" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
@@ -527,11 +527,11 @@
                                 </div>
                                 <div class="gradient-trans-black-bottom abs w-100 h-40 bottom-0"></div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- room end -->
 
                         <!-- room begin -->
-                        <div class="col-lg-4 col-sm-6">
+                        <!-- <div class="col-lg-4 col-sm-6">
                             <div class="hover relative text-light text-center wow fadeInUp" data-wow-delay=".9s">
                                 <img src="images-mountain-hotel/room/5.webp" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
@@ -553,11 +553,11 @@
                                 </div>
                                 <div class="gradient-trans-black-bottom abs w-100 h-40 bottom-0"></div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- room end -->
 
                         <!-- room begin -->
-                        <div class="col-lg-4 col-sm-6">
+                        <!-- <div class="col-lg-4 col-sm-6">
                             <div class="hover relative text-light text-center wow fadeInUp" data-wow-delay="1.1s">
                                 <img src="images-mountain-hotel/room/6.webp" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
@@ -579,7 +579,7 @@
                                 </div>
                                 <div class="gradient-trans-black-bottom abs w-100 h-40 bottom-0"></div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- room end -->
                     </div>
                 </div>
@@ -592,27 +592,27 @@
                             <div class="owl-single-dots owl-carousel owl-theme">
                                 <div class="item">
                                     <i class="icofont-quote-left id-color fs-40 mb-4 wow fadeInUp"></i>
-                                    <h3 class="mb-4 wow fadeInUp fs-32">Experience unparalleled luxury and personalized service at Almaris Hotel, where every stay is a journey into sophistication, comfort, and unforgettable memories.</h3>
-                                    <span class="wow fadeInUp">Donette Fondren</span>
+                                    <h3 class="mb-4 wow fadeInUp fs-32">Experience unparalleled luxury and personalized service at Tiger Wood, where every stay is a journey into sophistication, comfort, and unforgettable memories.</h3>
+                                    <span class="wow fadeInUp">Aditya Kumar</span>
                                 </div>
 
                                 <div class="item">
                                     <i class="icofont-quote-left id-color fs-40 mb-4 wow fadeInUp"></i>
-                                    <h3 class="mb-4 wow fadeInUp fs-32 lh-1-5">Experience unparalleled luxury and personalized service at Almaris Hotel, where every stay is a journey into sophistication, comfort, and unforgettable memories.</h3>
-                                    <span class="wow fadeInUp">Donette Fondren</span>
+                                    <h3 class="mb-4 wow fadeInUp fs-32 lh-1-5">Nature lovers will adore this resort, with its peaceful surroundings and modern amenities. The Majestic Roar Restaurant impressed us with its delicious food and immersive setting.</h3>
+                                    <span class="wow fadeInUp">Chandrabhan Singh</span>
                                 </div>
 
                                 <div class="item">
                                     <i class="icofont-quote-left id-color fs-40 mb-4 wow fadeInUp"></i>
-                                    <h3 class="mb-4 wow fadeInUp fs-32 lh-1-5">Experience unparalleled luxury and personalized service at Almaris Hotel, where every stay is a journey into sophistication, comfort, and unforgettable memories.</h3>
-                                    <span class="wow fadeInUp">Donette Fondren</span>
+                                    <h3 class="mb-4 wow fadeInUp fs-32 lh-1-5">A tranquil and enchanting trail that takes you through the heart of nature, offering peace and solitude. Every step on the Whispering Wilderness Path immerses you in the serene beauty of the wilderness.</h3>
+                                    <span class="wow fadeInUp">Arpit Singh</span>
                                 </div>
 
-                                <div class="item">
+                                <!-- <div class="item">
                                     <i class="icofont-quote-left id-color fs-40 mb-4 wow fadeInUp"></i>
                                     <h3 class="mb-4 wow fadeInUp fs-32 lh-1-5">Experience unparalleled luxury and personalized service at Almaris Hotel, where every stay is a journey into sophistication, comfort, and unforgettable memories.</h3>
                                     <span class="wow fadeInUp">Donette Fondren</span>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -635,11 +635,12 @@
                         <div class="d-lg-flex align-items-center justify-content-between text-center">
                             <div>
                                 <h3 class="fs-20">Address</h3>
-                                742 Evergreen Terrace<br>
-                                Brooklyn, NY 11201
+                                Plot No.27, Village Mustafabad<br>
+                                Tehsil Kalinagar<br>
+                                Pilibhit, UP 262124
                             </div>
                             <div>
-                                <img src="images/logo-white.webp" class="w-200px" alt=""><br>
+                                <img src="images/logo-image-trnspt.png" class="w-200px" alt=""><br>
                                 <div class="social-icons mb-sm-30 mt-4">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -650,8 +651,8 @@
                             </div>
                             <div>
                                 <h3 class="fs-20">Contact Us</h3>
-                                T. +929 333 9296<br>
-                                M. contact@almaris.com
+                                T. +91 8810051111 , +91 7895829370<br>
+                                M. tigerwoodsptr@gmail.com
                             </div>
                         </div>
                     </div>                    
