--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Almaris — Hotel Website Template</title>
-    <link rel="icon" href="images/icon.webp" type="image/gif" sizes="16x16">
+    <link rel="icon" href="images/apple-touch-icon.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
     <meta content="Almaris — Hotel Website Template" name="description" >
@@ -39,9 +39,9 @@
                                 <!-- logo begin -->
                                 <div id="logo">
                                     <a href="index.html">
-                                        <img class="logo-main" src="images/logo-white.webp" alt="" >
-                                        <img class="logo-scroll" src="images/logo-black.webp" alt="" >
-                                        <img class="logo-mobile" src="images/logo-white.webp" alt="" >
+                                        <img class="logo-main" src="images/logo-image-trnspt.png" alt="" >
+                                        <img class="logo-scroll" src="images/logo-image-trnspt.png" alt="" >
+                                        <img class="logo-mobile" src="images/logo-image-trnspt.png" alt="" >
                                     </a>
                                 </div>
                                 <!-- logo close -->
