--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Almaris — Hotel Website Template</title>
+    <title>Tiger Woods Pilibhit</title>
     <link rel="icon" href="images/apple-touch-icon.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
-    <meta content="Almaris — Hotel Website Template" name="description" >
+    <meta content="Tiger Woods Pilibhit" name="description" >
     <meta content="" name="keywords" >
     <meta content="" name="author" >
     <!-- CSS Files
@@ -429,11 +429,11 @@
                         <!-- room begin -->
                         <div class="col-lg-4 col-sm-6">
                             <div class="hover relative text-light text-center wow fadeInUp" data-wow-delay=".3s">
-                                <img src="images-mountain-hotel/room/1.webp" class="img-fluid" alt="">
+                                <img src="images-mountain-hotel/room/room1.jpg" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
                                     <h3 class="fs-40 lh-1 mb-4">₹3000</h3>
-                                    <a class="btn-line" href="room-single.html">View Details</a>
+                                    <a class="btn-line" href="room-single-style-2.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
                                 <div class="abs z-2 bottom-0 mb-3 w-100 text-center hover-op-0">
@@ -455,15 +455,15 @@
                         <!-- room begin -->
                         <div class="col-lg-4 col-sm-6">
                             <div class="hover relative text-light text-center wow fadeInUp" data-wow-delay=".4s">
-                                <img src="images-mountain-hotel/room/2.webp" class="img-fluid" alt="">
+                                <img src="images-mountain-hotel/room/room2.jpg" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
                                     <h3 class="fs-40 lh-1 mb-4">₹4000</h3>
-                                    <a class="btn-line" href="room-single.html">View Details</a>
+                                    <a class="btn-line" href="room-single-style-2.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
                                 <div class="abs z-2 bottom-0 mb-3 w-100 text-center hover-op-0">
-                                    <h3 class="mb-0">Summit Suite</h3>
+                                    <h3 class="mb-0">Attic Cottage</h3>
                                     <div class="text-center fs-14">
                                         <span class="mx-2">
                                             2 Guests
@@ -481,11 +481,11 @@
                         <!-- room begin -->
                         <div class="col-lg-4 col-sm-6">
                             <div class="hover relative text-light text-center wow fadeInUp" data-wow-delay=".5s">
-                                <img src="images-mountain-hotel/room/3.webp" class="img-fluid" alt="">
+                                <img src="images-mountain-hotel/room/room3.jpg" class="img-fluid" alt="">
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
                                     <h3 class="fs-40 lh-1 mb-4">₹5000</h3>
-                                    <a class="btn-line" href="room-single.html">View Details</a>
+                                    <a class="btn-line" href="room-single-style-2.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
                                 <div class="abs z-2 bottom-0 mb-3 w-100 text-center hover-op-0">
