--- a/update/room-single-style-2.html
+++ b/update/room-single-style-2.html
@@ -2,11 +2,11 @@
 <html lang="zxx">
 
 <head>
-    <title>Almaris — Hotel Website Template</title>
-    <link rel="icon" href="images/icon.webp" type="image/gif" sizes="16x16">
+    <title>Tiger Woods Pilibhit</title>
+    <link rel="icon" href="images/apple-touch-icon.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
-    <meta content="Almaris — Hotel Website Template" name="description" >
+    <meta content="Tiger Woods Pilibhit" name="description" >
     <meta content="" name="keywords" >
     <meta content="" name="author" >
     <!-- CSS Files
@@ -37,9 +37,9 @@
                         <div class="col-lg-12">
                             <div class="d-flex justify-content-between xs-hide">
                                 <div class="header-widget d-flex">                                    
-                                    <div class="topbar-widget"><a href="#"><i class="icofont-location-pin"></i>742 Evergreen Terrace Brooklyn, NY 11201</a></div>
-                                    <div class="topbar-widget"><a href="#"><i class="icofont-phone"></i>+929 333 9296</a></div>
-                                    <div class="topbar-widget"><a href="#"><i class="icofont-envelope"></i>contact@almaris.com</a></div>
+                                    <div class="topbar-widget"><a href="#"><i class="icofont-location-pin"></i>Plot No.27, Village Mustafabad,Tehsil Kalinagar,Pilibhit, UP 262124</a></div>
+                                    <div class="topbar-widget"><a href="#"><i class="icofont-phone"></i>+91 8810051111 , +91 7895829370</a></div>
+                                    <div class="topbar-widget"><a href="#"><i class="icofont-envelope"></i>tigerwoodsptr@gmail.com</a></div>
                                 </div>
 
                                 <div class="social-icons">
@@ -63,16 +63,16 @@
                                 <!-- logo begin -->
                                 <div id="logo">
                                     <a href="index.html">
-                                        <img class="logo-main" src="images/logo-white.webp" alt="" >
-                                        <img class="logo-scroll" src="images/logo-black.webp" alt="" >
-                                        <img class="logo-mobile" src="images/logo-white.webp" alt="" >
+                                        <img class="logo-main" src="images/logo-image-trnspt.png" alt="" >
+                                        <img class="logo-scroll" src="images/logo-image-trnspt.png" alt="" >
+                                        <img class="logo-mobile" src="images/logo-image-trnspt.png" alt="" >
                                     </a>
                                 </div>
                                 <!-- logo close -->
                             </div>
                             <div class="de-flex-col header-col-mid">
                                 <ul id="mainmenu">
-                                    <li><a class="menu-item" href="index.html">Home</a>
+                                    <!-- <li><a class="menu-item" href="index.html">Home</a>
                                         <ul class="mega">
                                             <li>
                                                 <div class="container">
@@ -160,7 +160,7 @@
                                                 </div>                                                
                                             </li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                     <li><a class="menu-item" href="rooms.html">Rooms</a>
                                         <ul class="mega">
                                             <li>
@@ -261,10 +261,10 @@
                     <a class="btn-prev"></a>                                
 
                     <div id="gallery-carousel" class="owl-3-cols-autowidth owl-carousel owl-theme">
-                        <img src="images/room-single/1.webp" class="h-600px" alt="">
-                        <img src="images/room-single/2.webp" class="h-600px" alt="">
-                        <img src="images/room-single/3.webp" class="h-600px" alt="">
-                        <img src="images/room-single/4.webp" class="h-600px" alt="">
+                        <img src="images/room-single/room5.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/room4.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/room7.jpg" class="h-600px" alt="">
+                        <img src="images/room-single/room6.jpg" class="h-600px" alt="">
                         <img src="images/room-single/5.webp" class="h-600px" alt="">
                     </div>
                 </div>
