--- a/update/alpine-retreat.html
+++ b/update/alpine-retreat.html
@@ -2,12 +2,12 @@
 <html lang="zxx">
 
 <head>
-    <title>Tiger Woods Pilibhit</title>
+    <title>Tiger Woods Pilibhit - Alpine Retreat</title>
     <link rel="icon" href="images/apple-touch-icon.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
-    <meta content="Tiger Woods Pilibhit" name="description" >
-    <meta content="" name="keywords" >
+    <meta content="Tiger Woods Pilibhit , your stay into the Heart of Jungle" name="description" >
+    <meta content="Resort in Pilibhi" name="keywords" >
     <meta content="" name="author" >
     <!-- CSS Files
     ================================================== -->
@@ -167,7 +167,7 @@
                                                 <div class="container">
                                                     <div class="sb-menu p-4">
                                                         <div class="row g-3">
-                                                            <div class="col-lg-3">
+                                                            <!-- <div class="col-lg-3">
                                                                 <h4>Rooms</h4>
                                                                 <ul class="no-bg">
                                                                     <li><a href="rooms.html">All Rooms Default</a></li>
@@ -176,7 +176,7 @@
                                                                     <li><a href="room-single.html">Single Room</a></li>
                                                                     <li><a href="room-single-style-2.html">Single Room Style 2</a></li>
                                                                 </ul>                     
-                                                            </div>
+                                                            </div> -->
                                                             <div class="col-lg-3 text-center">
                                                                 <div class="relative hover text-center overflow-hidden soft-shadow rounded-5px">
                                                                     <a href="room-single.html">
@@ -274,12 +274,12 @@
                 <div class="container">
                     <div class="row g-4 gx-5">
                         <div class="col-lg-7">
-                            <h2>Deluxe Room</h2>
+                            <h2>Alpine Retreat</h2>
 
                             <div class="d-flex">
                                 <div class="relative me-4">
                                     <img src="images/icons/guests.png" class="w-20px abs mt-1" alt="">
-                                    <p class="ml30 text-dark fw-500">2 Guests</p>
+                                    <p class="ml30 text-dark fw-500">2-4 Guests</p>
                                 </div>
 
                                 <div class="relative me-4">
