--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="images/apple-touch-icon.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" >
-    <meta content="Tiger Woods Pilibhit" name="description" >
+    <meta content="Tiger Woods Pilibhit , your stay into the Heart of Jungle" name="description" >
     <meta content="" name="keywords" >
     <meta content="" name="author" >
     <!-- CSS Files
@@ -433,17 +433,17 @@
                                 <div class="abs hover-op-1 z-4 hover-mt-40 abs-centered">
                                     <div class="fs-14">From</div>
                                     <h3 class="fs-40 lh-1 mb-4">₹3000</h3>
-                                    <a class="btn-line" href="room-single-style-2.html">View Details</a>
+                                    <a class="btn-line" href="alpine-retreat.html">View Details</a>
                                 </div>
                                 <div class="abs bg-color z-2 top-0 w-100 h-100 hover-op-1"></div>
                                 <div class="abs z-2 bottom-0 mb-3 w-100 text-center hover-op-0">
                                     <h3 class="mb-0">Alpine Retreat</h3>
                                     <div class="text-center fs-14">
                                         <span class="mx-2">
-                                            2 Guests
+                                            2-4 Guests
                                         </span>
                                         <span class="mx-2">
-                                            30 ft
+                                            350 Sqft
                                         </span>
                                     </div>
                                 </div>
@@ -466,10 +466,10 @@
                                     <h3 class="mb-0">Attic Cottage</h3>
                                     <div class="text-center fs-14">
                                         <span class="mx-2">
-                                            2 Guests
+                                            2-4 Guests
                                         </span>
                                         <span class="mx-2">
-                                            35 ft
+                                            350 Sqft
                                         </span>
                                     </div>
                                 </div>
@@ -492,10 +492,10 @@
                                     <h3 class="mb-0">Timber Haven</h3>
                                     <div class="text-center fs-14">
                                         <span class="mx-2">
-                                            2 Guests
+                                            2-4 Guests
                                         </span>
                                         <span class="mx-2">
-                                            35 ft
+                                            400 Sqft
                                         </span>
                                     </div>
                                 </div>
