--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -273,8 +273,8 @@
                                     </div>
                                 </div>
                                 <div class="sw-overlay op-3"></div>
-                                <img src="images-mountain-hotel/misc/leaf-rt.webp" class="w-20 abs end-0 top-0" alt="">
-                                <img src="images-mountain-hotel/misc/leaf-lt.webp" class="w-20 abs start-0 top-0" alt="">
+                                <!-- <img src="images-mountain-hotel/misc/leaf-rt.webp" class="w-20 abs end-0 top-0" alt=""> -->
+                                <!-- <img src="images-mountain-hotel/misc/leaf-lt.webp" class="w-20 abs start-0 top-0" alt=""> -->
                             </div>
                         </div>
                         <!-- Slides -->
@@ -316,8 +316,8 @@
                                     </div>
                                 </div>
                                 <div class="sw-overlay op-3"></div>
-                                <img src="images-mountain-hotel/misc/leaf-rt.webp" class="w-20 abs end-0 top-0" alt="">
-                                <img src="images-mountain-hotel/misc/leaf-lt.webp" class="w-20 abs start-0 top-0" alt="">
+                                <!-- <img src="images-mountain-hotel/misc/leaf-rt.webp" class="w-20 abs end-0 top-0" alt=""> -->
+                                <!-- <img src="images-mountain-hotel/misc/leaf-lt.webp" class="w-20 abs start-0 top-0" alt=""> -->
                             </div>
                         </div>                        
                         <!-- Slides -->
