--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -245,9 +245,9 @@
                     background-image: url(images-mountain-hotel/slider/tiger2_resized.jpg) !important;
                   }
                   
-                  /* .swiper-slide:nth-child(2) .swiper-inner {
+                  .swiper-slide:nth-child(2) .swiper-inner {
                     background-image: url(images-mountain-hotel/slider/tiger1_resized.jpg) !important;
-                  } */
+                  }
                 
                   /* Content adjustments */
                   .sw-caption {
