--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -246,7 +246,7 @@
                   }
                   
                   .swiper-slide:nth-child(2) .swiper-inner {
-                    background-image: url(images-mountain-hotel/slider/tiger1_resized.jpg) !important;
+                    background-image: url(images-mountain-hotel/slider/tiger1_resized.jpeg) !important;
                   }
                 
                   /* Content adjustments */
