--- a/update/homepage-mountain-hotel.html
+++ b/update/homepage-mountain-hotel.html
@@ -421,7 +421,7 @@
                                     </div>
                                 </div>
                                 <h4>Jungle Canopy</h4>
-                                <p>A canopy walk through dense foliage...</p>
+                                <p>Pilibhit Tiger Reserve, visitors can explore the scenic Chuka Beach, a tranquil lakeside destination perfect for picnics and birdwatching. The Gauri Shankar Temple, a revered ancient shrine, offers a spiritual retreat amidst nature's serenity.</p>
                             </div>
                         </div>
                     </div>
